fix: aligned containers for en info

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 	position: relative;
 	margin-top: 10px; 
 	float: left;
-	margin-left: 9%; 
+	margin-left: 10%; 
 	display: none;
 }
 .lng2 {
